aligned schedule and fixed discord insta buttons

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 
 
 body{
-  background: linear-gradient(to bottom, #84bfed 0%, #3333f1 100%);
+  background: linear-gradient(to bottom, #56b6ff 0%, #3333f1 100%);
   width: 100%;
   height: 100%;
   margin: 0px;
@@ -417,9 +417,8 @@ section ::-webkit-scrollbar-track {
   padding-bottom: 5%;
   gap: 10px;
   align-items: center;
-  justify-content: center;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 40% auto;
 }
 .schedule-title {
   background-color: white;
@@ -443,16 +442,18 @@ section ::-webkit-scrollbar-track {
 .schedule-section h2:nth-of-type(1) {
   grid-column: 2;
   grid-row: 2;
+  justify-self: left;
 }
 .schedule-section h2:nth-of-type(2) {
   grid-column: 2;
   grid-row: 3;
+  justify-self: left;
 }
 .schedule-section img {
   grid-column: 1;
   grid-row: 2 / 5;
-  justify-self: center;
-  width: 50%;
+  justify-self: right;
+  width: 65%;
 }
 .schedule-section h2:nth-of-type(3) {
   grid-column: 1 / -1;
